--- a/Responsive_Portfolio_Website/index.html
+++ b/Responsive_Portfolio_Website/index.html
@@ -4,7 +4,33 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
-
+<!--#964B00 -->
+<table id="prf"  >
+    <tr>
+        <td>
+            <img src="./images/Anhcanhan.jpeg" width="270" height="400" alt="">
+        </td>
+        <td>
+            1
+        </td>
+        <td>
+            1
+        </td>
+    </tr>
+    <tr>
+        <td></td>
+    </tr>
+    <tr>
+        <td>1</td>
+    </tr>
+    <tr>
+        <td>1</td>
+    </tr>
+    <tr>
+        <td>1</td>
+    </tr>
+</table>
 </body>
 </html>
